--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 }
 /* Carousel */
 #carousel{
-    height: 500px;
-    width: 700px;
+    height: 400px;
+    width: 600px;
     margin: 30px auto;
 }
 
@@ -24,4 +24,9 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    display: none;
+}
+/* devo vedere una img alla volta */
+#carousel img.active{
+    display: block;
 }
